<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:gravity="left">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/Name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/nameTxt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/family"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/familyTxt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/mailTxt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:text="@string/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/phoneTxt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/editBtn"
            android:text="@string/edit"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/saveBtn"
            android:text="@string/finish"/>
    </LinearLayout>

</LinearLayout>